--- a/grafana-docker/docker-compose-proxy.yml
+++ b/grafana-docker/docker-compose-proxy.yml
@@ -16,8 +16,8 @@ services:
       - ./datasources:/etc/grafana/provisioning/datasources
       - ./dashboards:/etc/grafana/provisioning/dashboards
     environment:
-      - http_proxy=http://172.16.20.40:7890
-      - https_proxy=http://172.16.20.40:7890
+      - http_proxy=http://你的代理IP地址:端口
+      - https_proxy=http://你的代理IP地址:端口
       - no_proxy=localhost,127.0.0.1
       - GF_INSTALL_PLUGINS=frser-sqlite-datasource
       - GF_PATHS_DATA=/var/lib/grafana
